--- a/site/index.njk
+++ b/site/index.njk
@@ -2,4 +2,12 @@
 layout: base
 permalink: /
 mapbox: true
+mainClass: map
 ---
+
+<div id="map"></div>
+<div id="header"></div>
+<div id="legend">
+  <form id="legend-form" method="GET" action="">
+  </form>
+</div>
