refactor: update frontend deps, layout

--- a/site/_includes/assets.njk
+++ b/site/_includes/assets.njk
@@ -1,6 +1,6 @@
-{% if mapbox %}
-<script src="static/mapbox-gl.js" defer></script>
-<link href="static/mapbox-gl.css" rel="stylesheet" />
+{% if maplibre %}
+<script src="static/maplibre-gl.js" defer></script>
+<link href="static/maplibre-gl.css" rel="stylesheet" />
 {% endif %}
 
 {%- set css -%}
