feat: solid-js, deploy updates

--- a/site/index.njk
+++ b/site/index.njk
@@ -5,7 +5,7 @@ maplibre: true
 mainClass: map
 ---
 
-<div id="map"></div>
+<div id="map-container"></div>
 <div id="header"></div>
 <div id="legend">
   <form id="legend-form" method="GET" action="">
