--- a/site/_includes/assets.njk
+++ b/site/_includes/assets.njk
@@ -1,6 +1,10 @@
 {% if maplibre %}
 <script src="static/maplibre-gl.js" defer></script>
 <link href="static/maplibre-gl.css" rel="stylesheet" />
+
+<script id="map-metadata" type="application/json">
+{{ site.electionMetadata | dump | safe }}
+</script>
 {% endif %}
 
 {%- set css -%}
