--- a/src/css/map.css
+++ b/src/css/map.css
@@ -17,3 +17,62 @@ main.map {
   right: 1.5rem;
   bottom: 2.5rem;
 }
+
+.legend {
+  position: absolute;
+  bottom: 24px;
+  right: 8px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 8px;
+  max-width: 225px;
+  max-height: 300px;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+.legend h4 {
+  margin-top: 4px;
+}
+
+.legend hr {
+  margin: 8px 0;
+  padding: 0;
+  background-color: #666;
+}
+
+.legend-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 14px;
+}
+
+.legend-item:last-child {
+  margin-bottom: 8px;
+}
+
+.color-ramp {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 4px;
+  height: 20px;
+  padding: 2px;
+  line-height: 1.5;
+}
+
+.legend .color {
+  height: 20px;
+  width: 20px;
+  margin-right: 8px;
+}
+
+.ramp-label:first-child {
+  color: #000 !important;
+}
+
+.ramp-label:last-child {
+  color: #fff;
+}
