--- a/site/_includes/footer.njk
+++ b/site/_includes/footer.njk
@@ -1,4 +1,4 @@
-<footer class="flex flex-row items-center justify-center py-5 mt-5 bg-gray-200">
+<footer class="flex flex-row items-center justify-center py-5 bg-gray-200">
   <div class="max-w-screen-md px-3 flex flex-row flex-wrap items-start justify-between flex-grow">
     <div>
       <p>
