--- a/site/_includes/analytics.njk
+++ b/site/_includes/analytics.njk
@@ -1,11 +1,7 @@
-{% if site.production and site.googleAnalyticsId %}
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.googleAnalyticsId }}"></script>
-<script>
-if (!(navigator.doNotTrack === "1" || window.doNotTrack == "1")) {
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', '{{ site.googleAnalyticsId }}', { 'anonymize_ip': true });
-}
-</script>
+{% if site.production and site.plausible %}
+<script
+    defer
+    data-domain="{{ site.domain }}"
+    src="https://plausible.io/js/plausible.js"
+></script>
 {% endif %}
