--- a/site/_includes/nav.njk
+++ b/site/_includes/nav.njk
@@ -1,9 +1,12 @@
-<header class="flex flex-row items-center justify-center py-3 bg-blue-800">
+<header class="flex flex-row items-center justify-center py-3 bg-blue-chicago">
   <a id="skip-navigation" class="visually-hidden-focusable" href="{{ page.url }}#main">Skip navigation</a>
-  <div class="max-w-6xl px-3 text-white flex flex-row items-start justify-between flex-grow">
+  <div class="max-w-6xl px-3 flex flex-row items-start justify-between flex-grow">
     <div class="flex flex-row items-center">
-      <a class="text-white" href="/">
-        {{ site.title }}
+      <a class="text-black nav-title-link" href="/">
+        {% include "chi-star.njk" %}
+        <span>
+          {{ site.title }}
+        </span>
       </a>
     </div>
     <nav id="nav" class="flex-column justify-end">
@@ -14,7 +17,7 @@
       <ul id="nav-menu" class="m-0 flex flex-row justify-end">
         {% for link in site.nav %}
         <li>
-          <a class="text-white" href="{{ link.url }}" {% if link.url == page.url %}aria-current="page"{% endif %} {% if link.url[0] != "/" %}target="_blank" rel="noopener"{% endif %}>{{ link.label }}</a>
+          <a class="text-black" href="{{ link.url }}" {% if link.url == page.url %}aria-current="page"{% endif %} {% if link.url[0] != "/" %}target="_blank" rel="noopener"{% endif %}>{{ link.label }}</a>
         </li>
         {% endfor %}
       </ul>
