--- a/src/css/content.css
+++ b/src/css/content.css
@@ -50,5 +50,9 @@
 }
 
 main.content {
-  @apply w-full max-w-screen-md px-3 mx-auto flex-1;
+  @apply w-full max-w-screen-md pt-5 px-3 mx-auto flex-1;
+}
+
+.bg-blue-chicago {
+  background-color: #b3ddf2;
 }
