--- a/src/css/map.css
+++ b/src/css/map.css
@@ -91,11 +91,166 @@ main.map {
   color: #fff;
 }
 
+#geocoder-container {
+  height: 42px;
+  border-radius: 2px;
+  background-color: #fff;
+  position: relative;
+  margin-bottom: 4px;
+}
+
+#geocoder svg {
+  @apply absolute z-10;
+
+  left: 12px;
+  top: 50%;
+  width: 16px;
+  transform: translateY(-50%);
+  opacity: 0.8;
+}
+
+#geocoder-results {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 2;
+  background-color: #fff;
+  box-shadow: 0 3px 2px -2px rgba(0, 0, 0, 0.25);
+}
+
+#geocoder-results .result {
+  padding: 6px 12px;
+  background-color: #fff;
+  cursor: pointer;
+  max-width: 100%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  border: solid 1px #d5d5d5;
+  border-top-width: 0;
+}
+#geocoder-results .result:hover,
+#geocoder-results .result:active {
+  box-shadow: 0 0 1px 1px #0a60c2;
+  position: relative;
+  z-index: 1;
+}
+#geocoder-results .result[aria-selected] {
+  background-color: #c0ddff;
+  font-weight: 600;
+}
+#geocoder-results .result:first-child {
+  border-top-width: 1px;
+}
+
+#geocoder,
+#geocoder-search {
+  width: 100%;
+  height: 100%;
+}
+
+#geocoder {
+  @apply relative;
+}
+
+#geocoder-search {
+  display: inline-flex;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  align-items: center;
+  justify-content: flex-start;
+  border-radius: 0;
+  border: solid 1px #d5d5d5;
+  padding: 12px 8px;
+  padding-left: 34px;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.25);
+}
+#geocoder-search::placeholder {
+  color: #2c2e35;
+  opacity: 0.8;
+}
+
+#geocoder-search:focus {
+  outline: none;
+  box-shadow: 0 0 1px 1px #0a60c2;
+}
+
+.delete {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  pointer-events: auto;
+  display: inline-block;
+  position: relative;
+  outline: none;
+  font-size: 0;
+  height: 20px;
+  width: 20px;
+  min-height: 20px;
+  min-width: 20px;
+  max-height: 20px;
+  max-width: 20px;
+  vertical-align: top;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.delete::before,
+.delete::after {
+  display: block;
+  position: absolute;
+  background-color: #fff;
+  content: "";
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%) rotate(45deg);
+  transform-origin: center center;
+}
+
+.delete::before {
+  height: 2px;
+  width: 50%;
+}
+
+.delete::after {
+  height: 50%;
+  width: 2px;
+}
+
+.delete:hover,
+.delete:focus {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.delete:active {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+#geocoder-clear {
+  position: absolute;
+  right: 12px;
+  top: 10px;
+  display: inline-block;
+}
+
+#geocoder-clear.hidden {
+  @apply hidden;
+}
+
+#geocoder-search {
+  padding-right: 36px;
+}
+
 @media screen and (min-width: 800px) {
-  /* #geocoder-container {
+  #geocoder-container {
     width: 360px;
     margin-bottom: 8px;
-  } */
+  }
 
   #legend {
     bottom: 24px;
@@ -172,18 +327,14 @@ main.map {
   pointer-events: all;
 }
 
-/* .maplibregl-popup-content .tooltip-row .label,
-.maplibregl-popup-content .tooltip-row .value {
-  flex: 1;
-}
-
-.maplibregl-popup-content .tooltip-row .value {
-  padding-left: 6px;
-  max-width: 50%;
-}*/
-
 .legend-row {
   @apply flex flex-row items-center justify-between;
+
+  line-height: 1.25;
+}
+
+.legend-row .label {
+  line-height: 1;
 }
 
 .legend-row .numbers {
@@ -191,15 +342,11 @@ main.map {
 }
 
 .legend-row .percent {
-  @apply inline-block pl-2;
-
-  width: 2.75rem;
+  @apply inline-block pl-2 w-12;
 }
 
 #legend .legend-row .percent {
-  @apply pl-3;
-
-  width: 3.5rem;
+  @apply pl-3 w-16;
 }
 
 .legend-row .color {
