--- a/src/css/map.css
+++ b/src/css/map.css
@@ -9,15 +9,6 @@ main.map {
   @apply absolute top-0 left-0 bottom-0 right-0;
 }
 
-#map-controls {
-  @apply absolute px-2 py-4 bg-gray-200;
-
-  width: 300px;
-  height: 240px;
-  right: 1.5rem;
-  bottom: 2.5rem;
-}
-
 #legend {
   position: absolute;
   left: 0;
@@ -397,4 +388,15 @@ main.map {
   font-size: 14px;
   line-height: 1;
   margin-bottom: 8px;
+}
+
+.mapboxgl-ctrl-attrib.mapboxgl-compact > summary,
+.maplibregl-ctrl-attrib.maplibregl-compact > summary {
+  @apply appearance-none;
+
+  list-style: none;
+}
+.mapboxgl-ctrl-attrib.mapboxgl-compact > summary::-webkit-details-marker,
+.maplibregl-ctrl-attrib.maplibregl-compact > summary::-webkit-details-marker {
+  @apply hidden;
 }
