--- a/site/manifest.json.njk
+++ b/site/manifest.json.njk
@@ -19,7 +19,7 @@ eleventyExcludeFromCollections: true
     }{%- if not loop.last -%},{%- endif -%}
     {% endfor %}
   ],
-  "theme_color": "#ffffff",
-  "background_color": "#ffffff",
+  "theme_color": "#b3ddf2",
+  "background_color": "#b3ddf2",
   "display": "standalone"
 }
