refactor: include analytics script if enabled

--- a/site/_layouts/base.njk
+++ b/site/_layouts/base.njk
@@ -3,6 +3,7 @@
   <head>
     {% include "metadata.njk" %}
     {% include "assets.njk" %}
+    {% include "analytics.njk" %}
   </head>
   <body>
     {% include "nav.njk" %}
