fix: plausibleAnalytics key

--- a/site/_includes/analytics.njk
+++ b/site/_includes/analytics.njk
@@ -1,4 +1,4 @@
-{% if site.production and site.plausible %}
+{% if site.plausibleAnalytics %}
 <script
     defer
     data-domain="{{ site.domain }}"
