--- a/site/_layouts/base.njk
+++ b/site/_layouts/base.njk
@@ -3,6 +3,7 @@
   <head>
     {% include "metadata.njk" %}
     {% include "assets.njk" %}
+    <meta name="test" />
     {% include "analytics.njk" %}
   </head>
   <body>
