--- a/src/css/map.css
+++ b/src/css/map.css
@@ -66,6 +66,7 @@ main.map {
 #legend .content {
   max-height: 140px;
   overflow-y: scroll;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
   padding: 8px 12px;
   background: radial-gradient(
