refactor: put data domain in conf

--- a/site/_includes/assets.njk
+++ b/site/_includes/assets.njk
@@ -3,6 +3,7 @@
 <link href="static/maplibre-gl.css" rel="stylesheet" />
 
 <meta name="azure-maps-key" content="{{ site.azureMapsKey }}" />
+<meta name="data-domain" content="{{ site.dataDomain }}" />
 
 <script id="map-metadata" type="application/json">
 {{ site.electionMetadata | dump | safe }}
