refactor: min height updates

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -9,11 +9,12 @@ html {
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   text-size-adjust: 100%;
+  min-height: 100vh;
   min-height: -webkit-fill-available;
 }
 
 body {
-  @apply flex flex-col min-h-screen;
+  @apply flex flex-col;
 
   line-height: 1.5;
 }
