feat: add download tool

--- a/site/_includes/assets.njk
+++ b/site/_includes/assets.njk
@@ -1,7 +1,9 @@
 {% if maplibre %}
 <script src="static/maplibre-gl.js" defer></script>
 <link href="static/maplibre-gl.css" rel="stylesheet" />
+{% endif %}
 
+{% if maplibre or mapMetadata %}
 <meta name="azure-maps-key" content="{{ site.azureMapsKey }}" />
 <meta name="data-domain" content="{{ site.dataDomain }}" />
 
