chore: update robots, embed

--- a/site/robots.txt.njk
+++ b/site/robots.txt.njk
@@ -5,7 +5,7 @@ eleventyExcludeFromCollections: true
 ---
 {% if site.robots %}
 User-agent: *
-Allow: /
+Disallow: /embed/
 {% else %}
 User-agent: *
 Disallow: /
