--- a/site/404.njk
+++ b/site/404.njk
@@ -1,6 +1,10 @@
 ---
 layout: base
-permalink: 404/
+permalink: /404.html
 ---
 
-<h1>404</h1>
+{% mdBlock %}
+# 404: Page not found
+
+There was an error finding the page you were looking for
+{% endmdBlock %}
