chore: update 404 title

--- a/site/404.njk
+++ b/site/404.njk
@@ -1,6 +1,7 @@
 ---
 layout: base
 permalink: /404.html
+title: "404: Page Not Found | Chicago Elections Archive"
 eleventyExcludeFromCollections: true
 ---
 
