feat: setup for separate embed pages

--- a/site/embed.njk
+++ b/site/embed.njk
@@ -1,19 +1,6 @@
 ---
+layout: embed
 permalink: /embed/
 maplibre: true
 eleventyExcludeFromCollections: true
 ---
-
-<!DOCTYPE html>
-<html lang="{{ site.locale }}" class="embed">
-  <head>
-    {% include "metadata.njk" %}
-    <script src="static/pym.v1.min.js" defer></script>
-    {% include "assets.njk" %}
-    {% include "analytics.njk" %}
-  </head>
-  <body>
-    <main class="map">
-    </main>
-  </body>
-</html>
