--- a/src/css/content.css
+++ b/src/css/content.css
@@ -50,7 +50,14 @@
 }
 
 main.content {
-  @apply w-full max-w-screen-md pt-5 px-3 mx-auto flex-1;
+  @apply w-full max-w-screen-md py-5 px-3 mx-auto flex-1;
+}
+
+.content pre {
+  @apply overflow-x-scroll max-w-full p-2 block;
+
+  background-color: #f4f4f4;
+  user-select: all;
 }
 
 .bg-blue-chicago {
