refactor: hide nav conditionally for embeds

--- a/site/_includes/nav.njk
+++ b/site/_includes/nav.njk
@@ -1,4 +1,4 @@
-<header class="flex flex-row items-center justify-center py-3 bg-blue-chicago">
+<header id="main-nav" class="flex flex-row items-center justify-center py-3 bg-blue-chicago">
   <a id="skip-navigation" class="visually-hidden-focusable" href="{{ page.url }}#main">Skip navigation</a>
   <div class="max-w-6xl px-3 flex flex-row items-start justify-between flex-grow">
     <div class="flex flex-row items-center">
