--- a/src/css/download.css
+++ b/src/css/download.css
@@ -12,7 +12,7 @@
 }
 
 .download-button {
-  @apply inline-block mt-4 p-2 rounded font-bold text-lg;
+  @apply inline-block mt-4 p-2 rounded font-semibold text-lg;
 
   background-color: #f4f4f4;
   border: solid 1px #d8d8d8;
