fix: remove test class

--- a/site/_layouts/embed.njk
+++ b/site/_layouts/embed.njk
@@ -10,7 +10,7 @@
     {% include "assets.njk" %}
     {% include "analytics.njk" %}
   </head>
-  <body class="is-embedded">
+  <body>
     {% if not hideNav %}
       {% include "nav.njk" %}
     {% endif %}
