fix: nav display

--- a/site/_includes/nav.njk
+++ b/site/_includes/nav.njk
@@ -9,8 +9,8 @@
         </span>
       </a>
     </div>
-    <nav id="nav" class="flex-column justify-end">
-      <button id="nav-toggle" class="flex-row items-center justify-end p-0 m-0 border-0 text-right appearance-none bg-transparent" aria-expanded="false" aria-controls="nav-menu">
+    <nav id="nav" class="flex flex-col justify-end">
+      <button id="nav-toggle" class="flex flex-row items-center justify-end p-0 m-0 border-0 text-right appearance-none bg-transparent" aria-expanded="false" aria-controls="nav-menu">
         <span>Menu</span>
         <span class="ml-1" aria-hidden="true">☰</span>
       </button>
