refactor: embed attr, style cleanup

--- a/src/css/map.css
+++ b/src/css/map.css
@@ -27,10 +27,7 @@ main.map + footer {
 }
 
 #legend {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  @apply absolute left-0 right-0 bottom-0;
 }
 
 #legend form {
@@ -49,11 +46,10 @@ main.map + footer {
 }
 
 #legend .content {
+  @apply overflow-y-scroll overflow-x-hidden py-3 px-2;
+  
   max-height: 140px;
-  overflow-y: scroll;
-  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
-  padding: 8px 12px;
   background: radial-gradient(
       farthest-side at 50% 100%,
       rgba(34, 34, 34, 0.3),
@@ -69,21 +65,17 @@ main.map + footer {
 }
 
 #legend .content h1 {
-  @apply text-lg pt-2 pb-3 my-0;
+  @apply text-lg pb-3 my-0;
 
   line-height: 1;
 }
 
 .legend-item {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  font-size: 14px;
+  @apply flex flex-row items-center justify-start text-sm;
 }
 
 .legend-item:last-child {
-  margin-bottom: 8px;
+  @apply mb-2;
 }
 
 .color-ramp {
@@ -93,9 +85,12 @@ main.map + footer {
 }
 
 .legend .color {
-  height: 20px;
-  width: 20px;
-  margin-right: 8px;
+  @apply h-5 w-5 mr-2;
+
+  min-height: 1.25rem;
+  min-width: 1.25rem;
+  max-height: 1.25rem;
+  max-width: 1.25rem;
 }
 
 .ramp-label:first-child {
@@ -107,35 +102,32 @@ main.map + footer {
 }
 
 #geocoder-container {
+  @apply relative mb-1;
+
   height: 42px;
-  border-radius: 2px;
   background-color: #fff;
-  position: relative;
-  margin-bottom: 4px;
 }
 
 #geocoder svg {
-  @apply absolute z-10;
+  @apply absolute z-10 w-4;
 
   left: 12px;
   top: 50%;
-  width: 16px;
   transform: translateY(-50%);
   opacity: 0.8;
 }
 
 #geocoder-results {
   @apply absolute left-0 right-0 w-full bg-white;
+
   top: 100%;
   z-index: 2;
   box-shadow: 0 3px 2px -2px rgba(0, 0, 0, 0.25);
 }
 
 #geocoder-results .result {
-  @apply bg-white cursor-pointer max-w-full overflow-hidden;
+  @apply bg-white cursor-pointer max-w-full overflow-hidden px-2 py-3 whitespace-no-wrap;
 
-  padding: 6px 12px;
-  white-space: nowrap;
   text-overflow: ellipsis;
   border: solid 1px #d5d5d5;
   border-top-width: 0;
@@ -165,14 +157,10 @@ main.map + footer {
 }
 
 #geocoder-search {
-  @apply inline-flex items-center justify-start;
+  @apply inline-flex items-center justify-start appearance-none py-3 px-2;
 
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
   border-radius: 0;
   border: solid 1px #d5d5d5;
-  padding: 12px 8px;
   padding-left: 34px;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.25);
 }
@@ -187,23 +175,16 @@ main.map + footer {
 }
 
 .delete {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
-  border: none;
+  @apply inline-block relative appearance-none border-none cursor-pointer h-5 w-5;
+
   border-radius: 50%;
-  cursor: pointer;
   pointer-events: auto;
-  display: inline-block;
-  position: relative;
   outline: none;
   font-size: 0;
-  height: 20px;
-  width: 20px;
-  min-height: 20px;
-  min-width: 20px;
-  max-height: 20px;
-  max-width: 20px;
+  min-height: 1.25rem;
+  min-width:  1.25rem;
+  max-height:  1.25rem;
+  max-width:  1.25rem;
   vertical-align: top;
   background-color: rgba(0, 0, 0, 0.2);
 }
@@ -323,7 +304,7 @@ main.map + footer {
 }
 
 .maplibregl-popup-close-button {
-  padding: 0 4px;
+  @apply px-0 py-1;
 }
 
 .maplibregl-popup {
@@ -375,7 +356,7 @@ main.map + footer {
   line-height: 1.25;
 }
 
-.legend-row:not(:last-child) {
+.legend-row:not(:last-of-type) {
   @apply mb-1 pb-1;
 
   border-color: rgba(0, 0, 0, 0.3);
@@ -410,15 +391,15 @@ main.map + footer {
 }
 
 .maplibregl-popup-content h2 {
-  font-size: 16px;
+  @apply text-base mb-1;
+
   line-height: 1;
-  margin-bottom: 4px;
 }
 
 .maplibregl-popup-content h3 {
-  font-size: 14px;
+  @apply text-sm mb-2;
+
   line-height: 1;
-  margin-bottom: 8px;
 }
 
 .maplibregl-ctrl-attrib summary.maplibregl-ctrl-attrib-button {
@@ -430,4 +411,12 @@ main.map + footer {
 .maplibregl-ctrl-attrib
   summary.maplibregl-ctrl-attrib-button::-webkit-details-marker {
   @apply hidden;
+}
+
+.embed-attribution {
+  @apply hidden pt-2 text-sm;
+}
+
+.is-embedded .embed-attribution {
+  @apply block;
 }
