--- a/site/_layouts/embed.njk
+++ b/site/_layouts/embed.njk
@@ -14,7 +14,7 @@
     {% if not hideNav %}
       {% include "nav.njk" %}
     {% endif %}
-    <main class="map">
+    <main id="main" class="map">
     </main>
   </body>
 </html>
