refactor: hide legend scrollbar

--- a/src/css/map.css
+++ b/src/css/map.css
@@ -50,6 +50,8 @@ main.map + footer {
 
   max-height: 140px;
   -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   background: radial-gradient(
       farthest-side at 50% 100%,
       rgba(34, 34, 34, 0.3),
@@ -62,6 +64,10 @@ main.map + footer {
   background-size: 100% 8px;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.3);
   border: solid 1px #d5d5d5;
+}
+
+#legend .content::-webkit-scrollbar {
+  display: none;
 }
 
 #legend .content h1 {
