fix: asset urls without base tag

--- a/site/_includes/assets.njk
+++ b/site/_includes/assets.njk
@@ -1,6 +1,6 @@
 {% if maplibre %}
-<script src="static/maplibre-gl.js" defer></script>
-<link href="static/maplibre-gl.css" rel="stylesheet" />
+<script src="/static/maplibre-gl.js" defer></script>
+<link href="/static/maplibre-gl.css" rel="stylesheet" />
 {% endif %}
 
 {% if maplibre or mapMetadata %}
