--- a/site/_layouts/embed.njk
+++ b/site/_layouts/embed.njk
@@ -6,7 +6,7 @@
     {% if embedElection %}
       <meta name="embed-election" content="{{ embedElection }}" />
     {% endif %}
-    <script src="static/pym.v1.min.js" defer></script>
+    <script src="/static/pym.v1.min.js" defer></script>
     {% include "assets.njk" %}
     {% include "analytics.njk" %}
   </head>
