refactor: clean up nav on embed

--- a/site/_layouts/embed.njk
+++ b/site/_layouts/embed.njk
@@ -11,7 +11,7 @@
     {% include "analytics.njk" %}
   </head>
   <body>
-    {% if not hideNav %}
+    {% if showNav %}
       {% include "nav.njk" %}
     {% endif %}
     <main id="main" class="map">
