refactor: update embed attribution logic

--- a/site/_layouts/embed.njk
+++ b/site/_layouts/embed.njk
@@ -6,6 +6,9 @@
     {% if embedElection %}
       <meta name="embed-election" content="{{ embedElection }}" />
     {% endif %}
+    {% if showEmbedAttribution %}
+      <meta name="embed-attribution" content="true" />
+    {% endif %}
     <script src="/static/pym.v1.min.js" defer></script>
     {% include "assets.njk" %}
     {% include "analytics.njk" %}
