--- a/site/elections/2022-democratic-primary.njk
+++ b/site/elections/2022-democratic-primary.njk
@@ -4,5 +4,6 @@ title: 2022 Democratic Primary | Chicago Elections Archive
 permalink: /elections/2022-democratic-primary/
 maplibre: true
 embedElection: 252
+showEmbedAttribution: true
 eleventyExcludeFromCollections: true
 ---
