--- a/site/elections/2020-general.njk
+++ b/site/elections/2020-general.njk
@@ -4,5 +4,6 @@ title: 2020 General | Chicago Elections Archive
 permalink: /elections/2020-general/
 maplibre: true
 embedElection: 251
+showEmbedAttribution: true
 eleventyExcludeFromCollections: true
 ---
