--- a/site/elections/2022-republican-primary.njk
+++ b/site/elections/2022-republican-primary.njk
@@ -4,5 +4,6 @@ title: 2022 Republican Primary | Chicago Elections Archive
 permalink: /elections/2022-republican-primary/
 maplibre: true
 embedElection: 253
+showEmbedAttribution: true
 eleventyExcludeFromCollections: true
 ---
