feat: prep embed page

--- a/src/css/map.css
+++ b/src/css/map.css
@@ -434,6 +434,10 @@ main.map + footer {
   @apply hidden pt-2 text-sm;
 }
 
+p.embed-attribution {
+  @apply italic;
+}
+
 .embedded .embed-attribution {
   @apply block;
 }
